Pasting formatted documents into the shell doesn't work

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.1.1
    • Affects Version/s: 2.1.0
    • Component/s: Shell
    • None
    • Environment:
      tested on OSX, 64bit
    • Major Change
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I used to be able to paste the output of findOne() directly into the shell because the interpreter stripped tabs from the beginning of the line.

      For example:

      > db.inventory.findOne()
      {
      "_id" : ObjectId("4ea894ab134e11f9f91d4909"),
      "_accountId" : "user1"
      }

            Assignee:
            Tad Marshall
            Reporter:
            Daniel Pasette (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: